# looped-transformer-distillation

./: .gitignore  README.md  program.md  pyproject.toml
configs/: config.yaml  eval_core.yaml
configs/data/: huginn_parquet.yaml  live_text.yaml  token_shards.yaml  trajectory.yaml
configs/eval_quality/: default.yaml
configs/experiment/: blackwell_attractor140.yaml  blackwell_live_attractor140.yaml  blackwell_live_attractor140_compositional_k16s8.yaml  blackwell_live_attractor140_p0_full.yaml  blackwell_live_huginn_p0.yaml  blackwell_live_huginn_recurrent_k16s4.yaml  blackwell_live_huginn_recurrent_k16s8.yaml  local.yaml
configs/loss/: compositional.yaml  eulerian_meanflow.yaml  lagrangian.yaml  p0.yaml
configs/student/: huginn_recurrent.yaml  small.yaml
configs/teacher/: attractor.yaml  huginn.yaml  mock.yaml  ouro.yaml  parcae.yaml
configs/trainer/: default.yaml
src/loopdistill/: __init__.py  evaluate_core.py  extract_trajectories.py  tokenize_text.py  train.py  train_module.py
src/loopdistill/data/: collate.py  datamodule.py  dataset.py  huginn_parquet.py  live.py  schema.py  text.py  token_shards.py  writer.py
src/loopdistill/losses/: common.py  flowmap.py  meanflow.py  p0.py  shortcut.py
src/loopdistill/metrics/: __init__.py  quality.py
src/loopdistill/models/: deq.py  huginn.py  student.py
tests/: test_data.py  test_eval_core.py  test_huginn_parquet_data.py  test_huginn_recurrent_student.py  test_huginn_teacher.py  test_lightning_smoke.py  test_live_training.py  test_losses.py  test_quality_metrics.py  test_text_data.py  test_token_shards.py
(+8 files in other folders)
